# norin-janusson-project

./: .gitignore  README.md  cloudbuild.yaml  docker-compose.yml  package-lock.json  requirements.txt
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/src/: config.py  main.py
backend/src/clustering/: affinity_matrix_creation.py  clustering_ops.py  matrix_clustering.py  types.py  util_funcs.py
backend/src/data/: DTO_objects.py  association_tables.py  dtos.py  enums.py
backend/src/db/: DB_models.py  DB_ops.py  association_tables.py  db_init.py  db_models.py  db_ops.py
backend/src/mqtt/: mqtt_receiver.py
backend/src/redis_cache/: init_redis.py
backend/src/routers/: car_observations.py  cars.py  generations.py  observation_sensors.py  trajectory_inference.py
backend/tests/: conftest.py
backend/tests/clustering/: test_clustering_ops.py
code/: Dockerfile  requirements.txt
code/src/: Classes2.py  DBconector.py  DBinit.py  classes.py  config.py  graph.py  jsonExample.json  main.py  mqttReciever.py  mqttSender.py
code/src/clustering/: affinity_matrix_creation.py  clustering_ops.py  graph.py  matrix_clustering.py  util_funcs.py
code/src/data/: DB_models.py  DTO_objects.py  association_tables.py  classes.py  enums.py  util_funcs.py
code/src/db/: DB_init.py  DB_ops.py
code/src/mqtt/: mqtt_receiver.py  mqtt_sender.py  (+1 more)
code/tests/: conftest.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: main.tsx
importer/: .dockerignore  Dockerfile  init.sh
scripts/: seed_generations.py
(+61 files in other folders)
