[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tpms-backend"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.1",
    "hdbscan==0.8.42",
    "numpy==2.4.4",
    "paho-mqtt==2.1.0",
    "psycopg[binary]",
    "pydantic==2.13.3",
    "python-dotenv==1.2.2",
    "redis==7.4.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "SQLAlchemy==2.0.49",
    "uvicorn[standard]==0.46.0",
]

[project.optional-dependencies]
dev = [
    "black==26.3.1",
    "pytest==9.0.3",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"

[tool.pyright]
extraPaths = ["src"]
